--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -2,15 +2,12 @@
   <html>
   <head>
     <meta charset="utf-8">
-    <title>Backbone Boilerplate</title>
+    <title>Boilerplate-Restify-Backbone</title>
   </head>
   <body>
     
     <!-- Concatenated js assets -->
     <script src="assets-libs.js"></script>
-
-    <!-- Concatenated css assets -->
-    <link rel="stylesheet" href="assets-styles.css">
 
     <!-- Compiled templates -->
     <script src="templates.js"></script>
@@ -30,6 +27,9 @@
     <script src="bb-collections.js"></script>
     <script src="bb-views.js"></script>
     <script src="bb-router.js"></script>
+
+    <!-- Concatenated css assets -->
+    <link rel="stylesheet" href="assets-styles.css">
 
   </body>
   </html>
