structure updated + ugifly task + prod composite task

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -7,10 +7,10 @@
   <body>
     
     <!-- Concatenated js assets -->
-    <script src="assets-libs.js"></script>
+    <script src="assets/libs.js"></script>
 
     <!-- Compiled templates -->
-    <script src="templates.js"></script>
+    <script src="assets/templates.js"></script>
 
     <!-- Backbone app -->
     <script>
@@ -23,13 +23,10 @@
         };
       })();
     </script>
-    <script src="bb-models.js"></script>
-    <script src="bb-collections.js"></script>
-    <script src="bb-views.js"></script>
-    <script src="bb-router.js"></script>
+    <script src="assets/app.js"></script>
 
     <!-- Concatenated css assets -->
-    <link rel="stylesheet" href="assets-styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
 
   </body>
   </html>
